--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6PM8STBXLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6PM8STBXLR');
+</script>
   <meta charset="UTF-8">
   <title>Landing Page</title>
   <!-- Подключаем analytics -->
@@ -21,3 +30,4 @@
   </div>
 </body>
 </html>
+
